infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radarx
  labels:
    name: radarx
    environment: production
